fix (Bug #8295 and #8296: varchar and varbinary conversion) select, gis & gis-tree tests fails at the moment, but I will push this CS because it was tested before and I'm absolutely sure it's right.